# twee_zcode_compiler

./: .gitignore  BUILD  LICENSE  README.md  index.html  logo.xcf  params.json
bithandling/: examples_bit_operations.cpp  examples_bitset_operations.cpp
cheat_sheets/: twee_cheat_sheet.htm
code/: print_ifelse_expression_test.twee
code/TweeZcodeCompiler/: .gitignore  BinaryFileWriter.cpp  BinaryFileWriter.h  CMakeLists.txt  Compiler_Log.txt  Compiler_Log.txt~  FileReader.cpp  FileReader.h  FindAA.cmake  Header.cpp  Header.h  RoutineGenerator.cpp  RoutineGenerator.h  SimpleCompilerPipeline.cpp  SimpleCompilerPipeline.h  ZCodeConverter.cpp  ZCodeConverter.h  ZCodeHeader.cpp  ZCodeHeader.h  add_test.zap  ass_example.ass  display.z8  display.zap  display.zap~  eat_apple.z8  eat_apple.zap  eat_apple.zap-  eat_apple.zap~  eat_apple_simple.z8  eat_apple_simple.zap  eat_apple_simple.zap-  eat_apple_simple.zap~  eat_simple_apple.z8  eat_simple_apple.zap  expr_binops.twee  expr_binops2.twee  expr_var_assign_expr.twee  expr_var_is_expr.twee  haus.z8  haus.zap  (+24 more)
code/TweeZcodeCompiler/data_model/: Body.cpp  CMakeLists.txt  FormattedText.cpp  Head.cpp  Link.cpp  Passage.cpp  PassageBody.cpp  PassageHead.cpp  Text.cpp  TweeFile.cpp  main.cpp
code/TweeZcodeCompiler/data_model/include/: PassageElement.h  TweeElement.h  TweeFile.h
code/TweeZcodeCompiler/data_model/include/Passage/: Body.h  Head.h  Link.h  Passage.h  Text.h
code/TweeZcodeCompiler/data_model/include/Passage/Body/: BodyPart.h  FormattedText.h  Text.h
code/TweeZcodeCompiler/data_model/include/PassageElements/: Link.h  Text.h
code/TweeZcodeCompiler/data_model/include/PassageStructure/: PassageBody.h
code/TweeZcodeCompiler/datamodell/: Link.cpp  Passage.cpp
code/TweeZcodeCompiler/datamodell/include/: TweeElement.h
code/TweeZcodeCompiler/datamodell/include/PassageElements/: Link.h
code/TweeZcodeCompiler/datamodell/include/PassageStructure/: Passage.h  PassageBody.h  PassageHead.h
code/TweeZcodeCompiler/main/: AALibTest.cpp  AALibTest.h  ArgsCommand.cpp  ArgsCommand.h  AsciiConverter.cpp  AsciiConverter.h  AssemblyParser.cpp  AssemblyParser.h  BinaryFileWriter.cpp  BinaryFileWriter.h  CMakeLists.txt  ITweeCompiler.cpp  ITweeCompiler.h  Jumps.cpp  Jumps.h  Logger.cpp  Logger.h  OpcodeParameterGenerator.cpp  OpcodeParameterGenerator.h  ParamStructs.h  RoutineGenerator.cpp  RoutineGenerator.h  SimpleCompilerPipeline.cpp  SimpleCompilerPipeline.h  TweeCompiler.cpp  TweeCompiler.h  TweeZCodeCompilerPipeline.cpp  TweeZCodeCompilerPipeline.h  UserSideFormatter.h  Utils.cpp  Utils.h  ZAssemblyGenerator.cpp  ZAssemblyGenerator.h  ZCodeConverter.cpp  ZCodeConverter.h  ZCodeHeader.cpp  ZCodeHeader.h  exceptions.h  main.cpp  main.cpp~  (+1 more)
code/TweeZcodeCompiler/main/ZCodeObjects/: ZCodeCallAdress.cpp  ZCodeCallAdress.h  ZCodeContainer.cpp  ZCodeContainer.h  ZCodeInstruction.cpp  ZCodeInstruction.h  ZCodeJump.cpp  ZCodeJump.h  ZCodeLabel.cpp  ZCodeLabel.h  ZCodeMemorySpace.cpp  ZCodeMemorySpace.h  ZCodeObject.cpp  ZCodeObject.h  ZCodePkgAdrrPadding.cpp  ZCodePkgAdrrPadding.h  ZCodeRoutine.cpp  ZCodeRoutine.h  ZCodeTable.cpp  ZCodeTable.h
code/TweeZcodeCompiler/main/logger/: Logger.h  README
code/TweeZcodeCompiler/main/logger/plog/: Log.h
code/TweeZcodeCompiler/main/test/: BinaryFileWriterTest.cpp  BinaryFileWriterTest.h  LocalVariablesTest.cpp  LocalVariablesTest.h  MainTest.cpp  MainTest.h  RoutineGeneratorTest.cpp  RoutineGeneratorTest.h  Test.cpp  Test.h  ZCodeHeaderTest.cpp  ZCodeHeaderTest.h
code/TweeZcodeCompiler/parser/: .gitignore  BinaryOperation.cpp  Body.cpp  Body.h  BodyInspector.cpp  CMakeLists.txt  Const.cpp  Display.cpp  DisplayMacro.cpp  Else.cpp  ElseIfMacro.cpp  ElseMacro.cpp  EndIf.cpp  EndIfMacro.cpp  FormattedText.cpp  Formatting.cpp  Function.cpp  GeneratedTweeLexer.cpp  GeneratedTweeParser.cpp  GeneratedTweeParser.hh  GeneratedTweeParser.hpp  Head.cpp  If.cpp  IfMacro.cpp  Link.cpp  Newline.cpp  Operator.cpp  Passage.cpp  Previous.cpp  Print.cpp  PrintMacro.cpp  README  Random.cpp  SetMacro.cpp  Text.cpp  Turns.cpp  TweeDoc.cpp  TweeFile.cpp  TweeParser.cpp  TweeScanner.cpp  (+8 more)
code/TweeZcodeCompiler/parser/include/: AssemblyGeneratorVisitor.h  Body.h  BodyInspector.h  ParseException.h  Passage.h  TweeDoc.h  TweeFile.h  TweeParser.h
code/TweeZcodeCompiler/parser/include/Passage/: Body.h  Head.h  Passage.h
code/TweeZcodeCompiler/parser/include/Passage/Body/: BodyPart.h  BodyPartsVisitor.h  FormattedText.h  Formatting.h  IBodyPartsVisitor.h  Link.h  Newline.h  Text.h  Variable.h
code/TweeZcodeCompiler/parser/include/Passage/Body/Expressions/: ArithmeticOp.h  AssignmentOp.h  BinaryOperation.h  BinaryOperator.h  Const.h  ConstInt.h  ConstStr.h  Expression.h  Function.h  LogicalOp.h  Operator.h  Previous.h  Random.h  RelationOp.h  Turns.h  UnaryOperation.h  UnaryOperator.h  Variable.h  Visited.h
code/TweeZcodeCompiler/parser/include/Passage/Body/Macros/: Display.h  DisplayMacro.h  Else.h  ElseIfMacro.h  ElseMacro.h  EndIf.h  EndIfMacro.h  If.h  IfElse.h  IfMacro.h  Macro.h  Previous.h  Print.h  PrintMacro.h  Random.h  SetMacro.h  Turns.h  Visited.h
code/TweeZcodeCompiler/test/: BinaryFileWriterTest.cpp  MainTest.cpp
code/bithandling/: examples_bit_access.cpp  examples_bit_operations.cpp  examples_bitset_operations.cpp
code/simple_arithmetics/: simple_const_print.twee  simple_division_print_I.twee  simple_division_print_II.twee  simple_modulo_print_II.twee  simple_substraction_print_I.twee  simple_variable_assignment_print_I.twee  simple_variable_assignment_print_II.twee
code_styling/: class.cpp  header.hpp
doc/: malloc_api.txt  malloc_lib.zap  twee_cheat_sheet.htm  twee_math_rules.twee
doc/twee_DOM/: twee_DOM.graphml
example/: hello_world.z3  printouttest.z3
examples/: dynamic_links.z4  dynamic_links.zap  empty.zap  test.zap  twee_to_zee_main.txt  z-code_uebersicht.txt
examples/teststories/: about.txt  (+1 more)
milestone_4/: image.z8  image.zap
milestone_presentations/: milestone_I_presentation.odp
twee_DOM/: twee_DOM.graphml  twee_DOM_explanation.txt  twee_DOM_source.class.violet.html
(+105 files in other folders)
